# Youtube-Sentiment-Analyzer

./: .dockerignore  Dockerfile  LICENSE  Notes  README.md  dvc.yaml  logs.md  main.py  params.yaml  pyproject.toml  run.py
app/yt-chrome-plugin-frontend/: popup.html  popup.js
flask_app/: app.py  testing_app.py
notebooks/: 1_Preprocessing_&_EDA.ipynb  2_experiment_1_baseline_model.ipynb  mlflow_connection_test.ipynb
src/youtube_sentiment/: __init__.py  config.py  data_ingestion.py
src/youtube_sentiment/models/: model_building.py  model_evaluation.py  register_model.py
tests/: test_api.py
